--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,10 @@
 
 <head>
   <meta charset="utf-8">
-  <title>RabmPortfolio</title>
+  <title>RABM Facility Management</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/png" href="./assets/img/logo.jpeg">
   <!-- <script src="https://cdn.tailwindcss.com"></script> -->
     
 
@@ -15,13 +15,13 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css"> -->
 
 <!-- Favicon base -->
-  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./assets/img/logo.jpeg">
 
   <!-- Favicon fallback per vecchi browser -->
-  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./assets/img/logo.jpeg">
 
   <!-- Apple Touch Icon -->
-  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="./assets/img/logo.jpeg">
 </head>
 
 <body>
